# tabata-rust

./: .gitignore  Cargo.toml  README.md  cargo.toml  run_debug.sh  run_release.sh
tabata_core/: Cargo.toml
tabata_core/src/: button.rs  lib.rs
tabata_rp2040/: Cargo.toml
tabata_rp2040/.cargo/: config.toml
tabata_rp2040/src/: main.rs
tabata_simulator/: Cargo.toml
tabata_simulator/src/: main.rs
