[package]
name = "tabata-rp2040"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = "0.3.0"
embassy-executor = {version="0.7.0", features=["arch-cortex-m", "executor-thread", "executor-interrupt"]}
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-rp = {version="0.4.0", features = ["rp2040", "unstable-pac", "time-driver", "critical-section-impl"]}
panic-halt = "1.0.0"
cortex-m = "=0.7.7"
cortex-m-rt = "=0.7.5"
mipidsi = "0.9.0"
rotary-encoder-embedded = "0.4.0"
tabata-core = { path = "../tabata_core" }